// Vitest Snapshot v1

exports[`setup-component > fixtures > tests/fixtures/basic.setup.tsx 1`] = `
"import { defineComponent, createVNode } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"basic.setup\\",
  props: {
    foo: {
      type: String,
      required: true
    }
  },
  setup(__props) {
    defineOptions({
      render: () => {
        return createVNode(\\"div\\", null, null);
      }
    });
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var basic_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic_setup as default };
"
`;

exports[`setup-component > fixtures > tests/fixtures/with-define-options.setup.tsx 1`] = `
"import { defineComponent, createVNode } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"with-define-options.setup\\",
  setup(__props) {
    defineOptions({
      name: \\"App\\"
    });
    defineOptions({
      render: () => {
        return createVNode(\\"div\\", null, null);
      }
    });
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var withDefineOptions_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { withDefineOptions_setup as default };
"
`;
